# nommo-engine

./: .gitignore  README.md  example.py  pyproject.toml  spec.md
docs/: LITERATURE.md  METHODOLOGY.md  PARAMETERS.md  VALIDATION.md
nommo/: __init__.py
nommo/chemistry/: __init__.py  bonds.py  kinetics.py  reactions.py  thermodynamics.py
nommo/cli/: __init__.py  analyze.py  main.py  run.py  universe.py
nommo/core/: particle.py  spatial.py  types.py  universe.py
nommo/physics/: __init__.py  constants.py  forces.py  integrator.py  thermostat.py
nommo/plugins/: __init__.py  base.py
nommo/presets/: __init__.py
nommo/storage/: __init__.py  persistence.py
nommo/utils/: __init__.py  logging.py
results/: README.md
tests/: __init__.py  test_chemistry.py  test_forces.py  test_particle.py
